--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "ytm lyrics",
+    "name": "Better YTM",
     "version": "1.0.0",
     "description": "makes ytm have actual time synced lyrics",
     "manifest_version": 3,
