Moved to web workers for better background performance

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,8 @@
         "*": false,
         "plaintext": false,
         "markdown": false,
-        "scminput": false
+        "scminput": false,
+        "javascript": false
     },
     "python.REPL.enableREPLSmartSend": false
 }
