--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -5,7 +5,7 @@
     "manifest_version": 3,
     "author": "Natesh Vemuri",
     "content_security_policy": {
-        "extension_pages": "script-src 'self'; object-src 'self'; connect-src https://ytm.nwvbug.com wss://ytm.nwvbug.com https://ytmbeta.nwvbug.com wss://ytmbeta.nwvbug.com http://127.0.0.1:7071 ws://127.0.0.1:7071;"
+        "extension_pages": "script-src 'self'; object-src 'self'; connect-src https://ytm.nwvbug.com wss://ytm.nwvbug.com https://ytmbeta.nwvbug.com wss://ytmbeta.nwvbug.com http://127.0.0.1:7071 ws://127.0.0.1:7071 https://ytm-beautifier-server-257194130500.us-central1.run.app wss://ytm-beautifier-server-257194130500.us-central1.run.app;"
     },
     "action":{
         "default_popup": "popup.html",
